<resources>
    <string name="app_name">MapsApp</string>
    <string name="enter_your_names">Enter your names</string>
    <string name="login">Login</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="continuing">Continue</string>
    <string name="enter_your_birthday">Enter your date of birth</string>
    <string name="show_address_on_the_map">Show address on the map</string>
</resources>