<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_age"
            style="@style/BlueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/age"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_address"
            style="@style/BlueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/address"
            android:inputType="text" />

        <EditText
            android:id="@+id/edt_city"
            style="@style/BlueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/city"
            android:inputType="text" />

        <EditText
            android:id="@+id/edt_date_of_birth"
            style="@style/BlueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_birthday"
            android:inputType="date" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continuing" />
    </LinearLayout>
</LinearLayout>